plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.143'
    id 'idea'
}

version = mod_version
group = mod_group_id
base { archivesName = mod_id }
java.toolchain.languageVersion = JavaLanguageVersion.of(25)

neoForge {
    version = project.neo_version
    runs {
        client { client() }
        server { server(); programArgument '--nogui' }
        configureEach { logLevel = org.slf4j.event.Level.INFO }
    }
    mods { "${mod_id}" { sourceSet sourceSets.main } }
}

var generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    var replaceProperties = [
            minecraft_version: minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version: neo_version,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_version: mod_version
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}

sourceSets.main.resources.srcDir generateModMetadata
sourceSets.main.java.exclude 'kr/moonseungjun/senbonzakura/ability/**'
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

jar {
    manifest {
        attributes(
                'Specification-Title': mod_name,
                'Specification-Version': mod_version,
                'Implementation-Title': mod_name,
                'Implementation-Version': mod_version,
                'Automatic-Module-Name': mod_group_id
        )
    }
}

idea { module { downloadSources = true; downloadJavadoc = true } }
